--- a/app/views/sync/whiteboards/_whiteboardedit.html.erb
+++ b/app/views/sync/whiteboards/_whiteboardedit.html.erb
@@ -1,5 +1,9 @@
 <form action="/whiteboard/update" method="put" data-remote=true id="whiteboardform">
   <input type="hidden" name="whiteboardid" value=<%=whiteboard.id%>>
   <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-  <textarea id="whiteboardarea" class="form-control" rows="18" name="content"><%=whiteboard.content%></textarea>
+  <% if whiteboard.edit == true && whiteboard.user == current_user %>
+    <textarea id="whiteboardarea" class="form-control" rows="18" name="content"><%=whiteboard.content%></textarea>
+  <% else %>
+    <textarea id="whiteboardarea" class="form-control" rows="18" name="content" readonly><%=whiteboard.content%></textarea>
+  <% end %>
 </form>
