--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,98 @@
   <%= include_sync_config %>
   <%= csrf_meta_tags %>
   <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+  <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.1.js"></script>
+  <meta name="google-signin-client_id" content="462449088434-dqsv26kcove38hjrsbjrhe1gkm3f4d1f.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
 </head>
 
 <body>
+  <!--
+  <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+  <script>
+    function onSignIn(googleUser) {
+      // Useful data for your client-side scripts:
+      var profile = googleUser.getBasicProfile();
+      console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+      console.log('Full Name: ' + profile.getName());
+      console.log('Given Name: ' + profile.getGivenName());
+      console.log('Family Name: ' + profile.getFamilyName());
+      console.log("Image URL: " + profile.getImageUrl());
+      console.log("Email: " + profile.getEmail());
+
+      // The ID token you need to pass to your backend:
+      var id_token = googleUser.getAuthResponse().id_token;
+      console.log("ID Token: " + id_token);
+    };
+  </script>
+  <a href="#" onclick="signOut();">Sign out</a>
+  <script>
+    function signOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      auth2.signOut().then(function () {
+        console.log('User signed out.');
+      });
+    }
+  </script>
+
+  <div id="naver_id_login"></div>
+  <script type="text/javascript">
+  	var naver_id_login = new naver_id_login("M0R6aB8v_c9bWdQlNM9D", "https://grouper1-hyunjunian.c9users.io/");
+  	naver_id_login.setButton("white", 2,40);
+  	naver_id_login.setDomain(".service.com");
+  	naver_id_login.setState("abcdefghijkmnopqrst");
+  	naver_id_login.setPopup();
+  	naver_id_login.init_naver_id_login();
+
+    naver_id_login.get_naver_userprofile();
+    email = naver_id_login.getProfileData('email');
+    name = naver_id_login.getProfileData('name');
+    age = naver_id_login.getProfileData('age');
+  </script>
+
+	<div id="kakao-profile"></div>
+  <a id="kakao-login-btn"></a>
+  <input type="button" onclick="Kakao.Auth.logout();" value="로그아웃" />
+  <input type="button" onclick="getKakaotalkUserProfile();" value="프로필" />
+  <script type='text/javascript'>
+    //<![CDATA[
+      // 사용할 앱의 JavaScript 키를 설정해 주세요.
+      Kakao.init('9565439f91483946dbb7c590c98360b7');
+      // 카카오 로그인 버튼을 생성합니다.
+      Kakao.Auth.createLoginButton({
+        container: '#kakao-login-btn',
+        success: function(authObj) {
+          alert(JSON.stringify(authObj));
+        },
+        fail: function(err) {
+           alert(JSON.stringify(err));
+        }
+      });
+      function getKakaotalkUserProfile(){
+				Kakao.API.request({
+					url: '/v1/user/me',
+					success: function(res) {
+						$("#kakao-profile").append(res.properties.nickname);
+						$("#kakao-profile").append($("<img/>",{"src":res.properties.profile_image,"alt":res.properties.nickname+"님의 프로필 사진"}));
+					},
+					fail: function(error) {
+						console.log(error);
+					}
+				});
+			}
+    //]]>
+  </script>
+  -->
+
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -34,12 +116,32 @@
           Grouper
         </a>
       </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
+      <% if current_user%>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <% if !current_page?(:controller => '/team', :action => 'index') %>
         <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">팀 바꾸기 <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">팀1</a></li>
+              <li><a href="#">팀2</a></li>
+              <li><a href="#">팀3</a></li>
+              <li><a href="#">팀4</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">새로운 팀 만들기</a></li>
+            </ul>
+          </li>
+          <% if current_page?(:controller => '/message', :action => 'show')%>
           <li class="active"><a href="#">화이트보드</a></li>
-          <li><a href="/resumes">클라우드</a></li>
+          <% else %>
+          <li><a href="#">화이트보드</a></li>
+          <% end %>
+          <% if current_page?(:controller => '/resumes')%>
+          <li class="active"><a href="">클라우드</a></li>
+          <% else %>
+          <li><%= link_to "클라우드", action: "index", controller: "resumes", team: @team.id %></li>
+          <% end %>
+          <li><a href="#">워크맵</a></li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
@@ -47,14 +149,72 @@
           </div>
           <button type="submit" class="btn btn-default">검색</button>
         </form>
+        <% end %>
+        <button type="button" class="navbar-btn navbar-left btn btn-link" data-toggle="modal" data-target="#report">그루퍼에 의견 보내기! <span class="badge">new</span></button>
         <ul class="nav navbar-nav navbar-right">
-          <button type="button" class="btn btn-default navbar-btn"><%= link_to "로그아웃", destroy_user_session_path, :method => :delete %></button>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=current_user.first_name %> <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">프로필 바꾸기</a></li>
+              <li><a href="#">설정</a></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "로그아웃", destroy_user_session_path, :method => :delete %></li>
+            </ul>
+          </li>
         </ul>
       </div><!-- /.navbar-collapse -->
+      <% else %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">그루퍼란?</a></li>
+          <li><a href="#">그루퍼에 연락하기</a></li>
+        </ul>
+      <% end %>
     </div><!-- /.container-fluid -->
   </nav>
 
+  <div class="modal fade" id="report" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"><!-- 의견보내기 모달 -->
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div style="text-align:center">
+          그루퍼는 칭찬보다 지적을 더 환영합니다^^
+          <textarea class="form-control" rows="3" placeholder="소중한 의견 쓰는 곳"></textarea>
+          <button type="submit" class="btn btn-default">보내기</button></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <%= yield %>
 
+  <button onclick="notifyMe()">Notify me!</button>
 </body>
 </html>
+
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  //if (Notification.permission !== "granted")
+    Notification.requestPermission();
+});
+
+function notifyMe() {
+  if (!Notification) {
+    alert('Desktop notifications not available in your browser. Try Chromium.');
+    return;
+  }
+
+  if (Notification.permission !== "granted")
+    Notification.requestPermission();
+  else {
+    var notification = new Notification('그루퍼에서 알림이??!!', {
+      icon: 'Picture.png',
+      body: "누가 메세지를 보냈어요!",
+    });
+
+    notification.onclick = function () {
+      window.open("/");
+    };
+
+  }
+
+}
+</script>
