--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -54,7 +54,8 @@
          <%= form_for :resume,:url => {:action => "create"}, html: { multipart: true } do |f| %>
            <%= f.file_field :attachment %>
            <%= f.hidden_field :name %>
-           
+           <%= f.hidden_field :team_id, :value => @team %>
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
