--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -118,17 +118,18 @@
       </div>
       <% if current_user%>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <% if !current_page?(:controller => '/team', :action => 'index') %>
+        <% if !current_page?(:controller => '/team', :action => 'index') and !current_page?(:controller => '/team', :action => 'newteam') %>
         <ul class="nav navbar-nav">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">팀 바꾸기 <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">팀1</a></li>
-              <li><a href="#">팀2</a></li>
-              <li><a href="#">팀3</a></li>
-              <li><a href="#">팀4</a></li>
+              <% current_user.teams.each do |team| %>
+                <li>
+                  <a href="/chat/show?team=<%=team.id%>"><%=team.teamname%></a>
+                </li>
+              <% end %>
               <li role="separator" class="divider"></li>
-              <li><a href="#">새로운 팀 만들기</a></li>
+              <li><a href="/team/newteam">새로운 팀 만들기</a></li>
             </ul>
           </li>
           <% if current_page?(:controller => '/message', :action => 'show')%>
@@ -150,13 +151,14 @@
           <button type="submit" class="btn btn-default">검색</button>
         </form>
         <% end %>
-        <button type="button" class="navbar-btn navbar-left btn btn-link" data-toggle="modal" data-target="#report">그루퍼에 의견 보내기! <span class="badge">new</span></button>
+        <a class="nav navbar-text navbar-left" href="https://open.kakao.com/o/sbpof8i">그루퍼에 의견 보내기!</a>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=current_user.first_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">프로필 바꾸기</a></li>
               <li><a href="#">설정</a></li>
+              <li><a href="https://open.kakao.com/o/sbpof8i">그루퍼에 의견 보내기!</a></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to "로그아웃", destroy_user_session_path, :method => :delete %></li>
             </ul>
@@ -166,23 +168,11 @@
       <% else %>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">그루퍼란?</a></li>
-          <li><a href="#">그루퍼에 연락하기</a></li>
+          <li><a href="https://open.kakao.com/o/sbpof8i">그루퍼에 연락하기</a></li>
         </ul>
       <% end %>
     </div><!-- /.container-fluid -->
   </nav>
-
-  <div class="modal fade" id="report" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"><!-- 의견보내기 모달 -->
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content">
-        <div style="text-align:center">
-          그루퍼는 칭찬보다 지적을 더 환영합니다^^
-          <textarea class="form-control" rows="3" placeholder="소중한 의견 쓰는 곳"></textarea>
-          <button type="submit" class="btn btn-default">보내기</button></button>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <%= yield %>
 
