--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -1,22 +1,30 @@
-<h3>팀방 들어가기</h3>
-<% @team.each do |team| %>
-  <li>
-    <form action ="/chat/show" method="get">
-      <input type="hidden" name="team" value=<%=team.id%>>
-      <input type="submit" value="<%=team.teamname%>">
-    </form>
-  </li>
-<% end %>
 
-<h3> Create Team </h3>
+<style>
+body
+{
+background-image:url('/bgmoomin.jpg');
+background-repeat:no-repeat;
+background-size: cover;
+}
+</style>
 
-<form action="/team/create" method="post">
-  <input type="text" name="teamname" placeholder="teamname">
-  <% @user.each do |p| %>
-    <% if p != current_user %>
-      <%= p.email %> = <%= check_box_tag('user_ids[]', p.id) %><br />
-    <% end %>
-  <% end %>
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-  <input type="submit">
-</form>
+
+<div style="text-align:center">
+  <div class="row">
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="col-sm-4 col-sm-offset-4">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h1>팀방 들어가기</h1>
+          <% @team.each do |team| %>
+            <form action ="/chat/show" method="get">
+              <input type="hidden" name="team" value=<%=team.id%>>
+              <button type="submit" class="btn btn-default"><%=team.teamname%></button>
+            </form>
+          <% end %>
+          <a class="btn btn-link" href="team/newteam" role="button">새로운 팀 만들기</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
