--- a/app/views/team/newteam.html.erb
+++ b/app/views/team/newteam.html.erb
@@ -19,7 +19,7 @@ background-size: cover;
             <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
 
             <div class="form-group">
-              <input type="text" class="form-control" name="teamname" placeholder="팀 이름">
+              <input type="text" class="form-control" name="teamname" placeholder="팀 이름" required>
             </div>
             <button type="submit" class="btn btn-default">팀 만들기</button>
             <br>초대할 멤버 선택<br>
