user/sign_up edit

--- a/app/views/test/index.html.erb
+++ b/app/views/test/index.html.erb
@@ -22,11 +22,6 @@
     <div style="text-align:center">
       화이트 보드
       <textarea id="whiteboard" class="form-control" rows="20"></textarea>
-      <nav>
-        <ul class="pagination pagination-sm">
-          <li><button class="btn btn-default" id="whiteboardsend">화이트보드 수정완료</button></li>
-        </ul>
-      </nav>
     </div>
   </div>
 </div>
@@ -53,7 +48,7 @@ function chatbot5(){
   $("#test").append("<div class=\"row\"><div class=\"col-sm-1\"><img src=\"/favicon.ico\" class=\"img-rounded\" style=\"padding-top:2px; padding-left:2px\" width=\"36px\" height=\"36px\"></div><div class=\"col-sm-11\"><strong>그루퍼 봇</strong><br>화이트 보드를 수정하면서 팀원과 의견을 빠르게 정리할 수 있어요ㅎㅎ<br></div></div>");
 }
 function chatbot6(){
-  $("#test").append("<div class=\"row\"><div class=\"col-sm-1\"><img src=\"/favicon.ico\" class=\"img-rounded\" style=\"padding-top:2px; padding-left:2px\" width=\"36px\" height=\"36px\"></div><div class=\"col-sm-11\"><strong>그루퍼 봇</strong><br>이제 로그인 하고 팀플을 도와주는 더 많은 기능을 이용해 보세요.<br></div></div>");
+  $("#test").append("<div class=\"row\"><div class=\"col-sm-1\"><img src=\"/favicon.ico\" class=\"img-rounded\" style=\"padding-top:2px; padding-left:2px\" width=\"36px\" height=\"36px\"></div><div class=\"col-sm-11\"><strong>그루퍼 봇</strong><br>이제 로그인 하고 팀플을 도와주는 클라우드와 워크맵 등의 더 많은 기능을 이용해 보세요.<br></div></div>");
 }
 function chatbot7(){
   $("#test").append("<div class=\"row\"><div class=\"col-sm-1\"><img src=\"/favicon.ico\" class=\"img-rounded\" style=\"padding-top:2px; padding-left:2px\" width=\"36px\" height=\"36px\"></div><div class=\"col-sm-11\"><strong>그루퍼 봇</strong><br><a href=\"/users/sign_up\">가입하기</a> 또는 <a href=\"/users/sign_in\">로그인</a><br></div></div>");
