--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,45 +14,44 @@ background-size: cover;
       <div class="panel panel-default">
         <div class="panel-body">
 
-          <h2>Sign up</h2>
+          <h2>가입하기</h2>
           
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= devise_error_messages! %>
           
             <div class="field">
-              <%= f.label :email %><br />
-              <%= f.email_field :email, autofocus: true %>
+              <%= f.label :이메일 %><br />
+              <%= f.email_field :email, autofocus: true, required: true %>
             </div>
             
             <div class="field">
-              <%= f.label :first_name %><br />
-              <%= f.text_field :first_name, autofocus: true %>
+              <%= f.label :성 %><br />
+              <%= f.text_field :last_name %>
             </div>
             
             <div class="field">
-              <%= f.label :last_name %><br />
-              <%= f.text_field :last_name, autofocus: true %>
+              <%= f.label :이름 %><br />
+              <%= f.text_field :first_name %>
             </div>
           
             <div class="field">
-              <%= f.label :password %>
+              <%= f.label :비밀번호 %>
               <% if @minimum_password_length %>
-              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <em>(최소 <%= @minimum_password_length %>자 이상)</em>
               <% end %><br />
-              <%= f.password_field :password, autocomplete: "off" %>
+              <%= f.password_field :password, autocomplete: "off", required: true %>
             </div>
           
             <div class="field">
-              <%= f.label :password_confirmation %><br />
-              <%= f.password_field :password_confirmation, autocomplete: "off" %>
+              <%= f.label :비밀번호확인 %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "off", required: true %>
             </div>
           
             <div class="actions">
-              <%= f.submit "Sign up" %>
+              <button type="submit" class="btn btn-link">가입 완료</button>
             </div>
           <% end %>
           
-          <%= render "devise/shared/links" %>
         </div>
       </div>
     </div>
