--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -3,6 +3,8 @@
 	<%= link_to "ENTIRE", action: 'entire', controller: 'task', team: @team.id%>
 </head>
 
+
+<body data-no-turbolink="true">
 <style>
 	#sidenav{
 	    height: 100%;
@@ -14,7 +16,7 @@
 	    background-color: #111;
 	    overflow-x: hidden;
 	}
-</style>
+</style>	
 <% temp = [] %>
 <% temp += @team.users %>
 <nav id="sidenav" class="nav nav-stacked">
@@ -28,44 +30,93 @@
 	<div class="modal fade" id="<%=idx%>info" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
 	  <div class="modal-dialog modal-sm">
 	    <div class="modal-content">
-			<table class="abc">
-				<colgroup> <col>
-				<colgroup> <col> <col> <col>
-				<thead>
-			 	<tr> <th>
-			 		<% base = 9 %>
-				<%for i in 0..base %>
-				  <% a = Date.today + i %>
-				 	<th style="border-right: 1px solid #707070; border-left: 1px solid #707070;"> <%=a.strftime("%m/%d") %>
-				<% end %>
-		
-				<tbody>
-					<% ro = t.id %>
-					<% @taskindiv = t.tasks.where(:team_id => params[:team]) %>
-					<% @taskindiv.each_with_index do |b,i| %>
-						<% if b.duedate == nil %>
-						<% b.duedate = Date.today %>
+	    	<style>
+					.bar2 {
+					    background-color: #F3F3F3; /*gray*/
+					    width: 70%;
+					    /*height: 30px;*/
+					    height: 40px;
+					    /*border-left-style: dotted;
+					    border-left-color: black;
+					    border-left-width: thin;
+					    border-top-style: dotted;
+					    border-top-color: black;
+					    border-top-width: thin;*/
+					}
+					.bar2-innertask:after{
+					    position: absolute;
+						right: 20%;
+						color: #0C0C0C;
+						content: attr(data-task);
+						font-size: 18px;
+						font-weight: 700;
+						line-height: 30px;
+					}
+					.bar-innerday {
+						background-color: #00B0F0; /*slight deep blue*/
+						width: 0%;
+						/*height: 100%;*/
+						height: 30px;
+						top: 5px;
+						position: relative;
+						transition: width 1250ms linear;
+					}
+					
+					.bar-innerday:after {
+						position: absolute;
+						right: 5.5%;
+						color: #fff; /*white*/
+						content: attr(data-display);
+						font-size: 18px;
+						font-weight: 700;
+						line-height: 30px;
+					}
+				</style>
+				<% ro = t.id %>
+				<% @taskindiv = t.tasks.where(:team_id => params[:team]) %>
+				<% @taskindiv.each_with_index do |b,i| %>
+					<!-- gantt head -->
+					<div class="bar2">
+						<% for j in 0..11 %>
+							<% a = Date.today + j %>
+							<div class="col-md-1"><%=a.strftime("%m/%d") %></div>
 						<% end %>
-					  <tr> <th scope=rowgroup style="border: 1px solid #707070;"> <%=b.taskname%> </th>
-					  <% for j in 0..base %>
-					  	<% a = b.duedate - (Date.today + j) %>
-						  <% if a >= 0 %>
-						  	<td id="<%=i*10+j%>th" style="border-right: 1px dotted #707070; background-color: #606060; animation-duration: 3s; animation-name: slidein;"></td>
-						  	
-						  <% else %>
-						  	<td style="border-right: 1px dotted #707070;"></td>
-						  <% end %>
-					  <% end %>
+					</div>
+					<% if b.duedate == nil %>
+						<% b.duedate = Date.today %>
 					<% end %>
-				</tbody>
-			</table>
+					<% a = (b.duedate - (Date.today)).to_i %>
+					<% if a > 0 %>
+						<div class="bar2">
+							<div class="bar2-innertask" data-task ="<%=b.taskname%>"></div>
+					  		<div id="<%=i%>th-gantt" class="bar-innerday bar-<%=a%>" data-date="<%=a%>" data-display ="D -<%=a%>"></div>
+						</div>
+					<% end %>
+				<% end %>
+			<script>
+				    function ganttfn(){
+				        (function(document) {
+				          var _bars = [].slice.call(document.querySelectorAll('.bar-innerday'));
+				          _bars.map(function(bar, index) {
+				            setTimeout(function() {
+				              var b = bar.dataset.date * 100/12;
+				              if(b>=99){
+				              	b=99;
+				              }
+				              b+="%";
+				              bar.style.width = b;
+				            }, 1);
+				          });
+				        })(document)
+				    }
+				    ganttfn();
+			  	</script>
 	    </div>
 	  </div>
 	</div>
 <% end %>
-
-
-<body data-no-turbolink="true">
+	
+	
 	<!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist" style="padding-left: 70px;">
     <li role="presentation" class="active"><a href="#contribution" aria-controls="contribution" role="tab" data-toggle="tab">Contribution</a></li>
@@ -96,6 +147,10 @@
 					</style>
 					<canvas id="circlegraph" width="400px" height="400px"></canvas>
 					<% sum = 0 %>
+					<% cnt = @tasklist.count %>
+					<% if cnt == 0 %>
+					<% cnt = 1 %>
+					<% end %>
 					<% @tasklist.each do |t| %>
 						<% sum += (t.wansungdo).to_i %>
 					<% end %>
@@ -343,43 +398,48 @@
 					  line-height: 30px;
 					}
 				</style>
+				<h4> Completion </h4>
 				<% @tasklist.each do |t| %>
-					<li> <%=t.taskname%> </li>
-					<div class="bar">
-					  	<div class="bar-inner bar-<%=(t.wansungdo).to_i %>" data-percent="<%=(t.wansungdo).to_i %>%"></div>
-					</div>
+					<% if t.wansungdo < 100 %>
+						<li> <%=t.taskname%> </li>
+						<div class="bar">
+						  	<div class="bar-inner bar-<%=(t.wansungdo).to_i %>" data-percent="<%=(t.wansungdo).to_i %>%"></div>
+						</div>
+					<% end %>
 				<% end %>
 				<script> horild(); </script>
 			</div>
 			<div class="col-md-6">
 				<h4>너가 할 일</h4>
 				<% @taskdo.each_with_index do |taskdo,slideridx| %>
-				  <li>
-				    <p>name = <%=taskdo.taskname%></p>
-				    <p>
-				      시킨놈 =
-				      <%sender = User.find(taskdo.sender)%>
-				      <%=sender.email%>
-				    </p>
-				    <p>due = <%=taskdo.duedate%></p>
-				    <form action="/task/wansungdo_update" method="post">
-				    	<input type="hidden" name="task_id" value="<%=taskdo.id%>">
-				    	<input type="hidden" name="team_id" value="<%=taskdo.team_id%>">
-						<a>comment</a><textarea type="text" name="comment" placeholder="comment for details"></textarea>
-						<br>
-				       	<input id="sl<%=slideridx%>" name="wansungdo" type="text" data-slider-value="<%= taskdo.wansungdo %>" data-slider-ticks="[0,10, 20,30, 40,50, 60,70, 80,90, 100]" data-slider-ticks-snap-bounds="30" data-slider-ticks-labels='['0%','', '20%','', '40%','', '60%','', '80%','', '100%']'/>
-						<script>
-						var slider = new Slider("#sl<%=slideridx%>", {
-						    ticks: [0,10, 20,30, 40,50, 60,70, 80,90, 100],
-						    ticks_labels: ['0%','', '20%','', '40%','', '60%','', '80%','', '100%'],
-						    ticks_snap_bounds: 30
-						});
-						</script>
-				    	<%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-				
-				    	<input type="submit" value="수정">
-				    </form>
-				  </li>
+					<% if taskdo.wansungdo < 100 %>
+						<li>
+						    <p>name = <%=taskdo.taskname%></p>
+						    <p>
+						    	시킨놈 =
+						    	<%sender = User.find(taskdo.sender)%>
+						    	<%=sender.email%>
+						    </p>
+						    <p>due = <%=taskdo.duedate%></p>
+						    <form action="/task/wansungdo_update" method="post">
+						    	<input type="hidden" name="task_id" value="<%=taskdo.id%>">
+						    	<input type="hidden" name="team_id" value="<%=taskdo.team_id%>">
+								<a>comment</a><textarea type="text" name="comment" placeholder="comment for details"></textarea>
+								<br><br>
+						       	<input id="sl<%=slideridx%>" name="wansungdo" type="text" data-slider-value="<%= taskdo.wansungdo %>" data-slider-ticks="[0,10, 20,30, 40,50, 60,70, 80,90, 100]" data-slider-ticks-snap-bounds="30" data-slider-ticks-labels='['0%','', '20%','', '40%','', '60%','', '80%','', '100%']'/>
+								<script>
+								var slider = new Slider("#sl<%=slideridx%>", {
+								    ticks: [0,10, 20,30, 40,50, 60,70, 80,90, 100],
+								    ticks_labels: ['0%','', '20%','', '40%','', '60%','', '80%','', '100%'],
+								    ticks_snap_bounds: 30
+								});
+								</script>
+						    	<%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+						
+						    	<input type="submit" value="수정">
+						    </form>
+						</li>
+					<% end %>
 				<% end %>
 			</div>
 		</div>
@@ -389,11 +449,13 @@
 	
 		<h4>너가 시킨 일</h4>
 		<% @tasksend.each do |tasksend| %>
-		  <li> name = <%=tasksend.taskname%> due = <%=tasksend.duedate%> 완성도 = <%=tasksend.wansungdo%>
-		    <% tasksend.users.each do |user| %>
-		      <p>하는사람 = <%=user.email%></p>
-		    <% end %>
-		  </li>
+			<% if tasksend.wansungdo < 100 %>
+			  <li> name = <%=tasksend.taskname%> due = <%=tasksend.duedate%> 완성도 = <%=tasksend.wansungdo%>
+			    <% tasksend.users.each do |user| %>
+			      <p>하는사람 = <%=user.email%></p>
+			    <% end %>
+			  </li>
+			<% end %>
 		<% end %>
 		
     </div>
