zero division error solved

--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -243,7 +243,7 @@
 						      init();
 						    }
 						    
-						    draw(<%=(sum/@tasklist.count)%>);
+						    draw(<%=(sum/cnt)%>);
 						    //redraw_loop = setInterval(draw,2000); //Draw a new chart every 2seconds
 						}
 						/*function addLoadEvent(func) {
@@ -462,11 +462,6 @@
     <!-- Tab ends -->
 </div>
 
-	
-	
-	
-	
-	
 	<br>
 	
 	<script>
