--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -1,31 +1,38 @@
+<style>
+	
+	.homebody{
+		width: 82%;
+	}
+	.sidebar{
+	    height: 100%;
+	    width: 18%;
+	    max-width: 250px;
+	    position: absolute;
+	    z-index: 1;
+	    top: 51px;
+	    right: 0;
+	    background-color: #111;
+	    overflow-x: hidden;
+	    margin-left: 3px;
+	}
+</style>
 <head>
 	<h2> <%=current_user.first_name%><%=current_user.last_name%> <%=current_user.email%> </h2>
 	<%= link_to "ENTIRE", action: 'entire', controller: 'task', team: @team.id%>
 </head>
 
 
+
 <body data-no-turbolink="true">
-<style>
-	#sidenav{
-	    height: 100%;
-	    width: 250px;
-	    position: fixed;
-	    z-index: 1;
-	    top: 0;
-	    right: 0;
-	    background-color: #111;
-	    overflow-x: hidden;
-	}
-</style>	
-<% temp = [] %>
+	<% temp = [] %>
 <% temp += @team.users %>
-<nav id="sidenav" class="nav nav-stacked">
+<section class="sidebar">
 	<% temp.each_with_index do |t,idx| %>
 	  	<li role="presentation" class="active" id="<%=idx%>" data-toggle="modal" data-target="#<%=idx%>info">
 	  		<a><%=t.last_name%><%=t.first_name%> <%=t.email%> <br><%=(Time.now - t.last_seen)%> seconds ago</a>
 	  	</li>
 	<% end %>
-</nav>
+</section>
 <% temp.each_with_index do |t,idx| %>
 	<div class="modal fade" id="<%=idx%>info" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
 	  <div class="modal-dialog modal-sm">
@@ -115,6 +122,7 @@
 	  </div>
 	</div>
 <% end %>
+<div class="homebody">
 	
 	
 	<!-- Nav tabs -->
@@ -492,5 +500,5 @@
 		}
 	</script>
 	<button onclick="notifyMe()">Notify me!</button>
-	
+</div>	
 </body>
