--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-sm-6">
     <div style="text-align:center">채팅창</div>
-    <div style="overflow:auto; width:auto; height:400px;" id="chatbox">
+    <div style="overflow:scroll; overflow-x:hidden; word-wrap:break-word; word-break:break-all; width:auto; height:400px;" id="chatbox">
 
       <% @chat.messages.each do |message| %>
 
@@ -29,7 +29,7 @@
     <%= form_for(:message, :url => {:controller => 'message', :action => 'create'}, :remote => true, :html => {:id => "messageform"}) do |f| %>
       <div class="form-group has-success has-feedback">
         <div class="input-group">
-          <input type="text" name="message[content]" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status" autofocus required>
+          <input type="text" name="message[content]" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status" autofocus required autocomplete="off">
           <span class="input-group-addon">+</span>
         </div>
       </div>
