--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -11,7 +11,7 @@
 
         <div class="row">
           <div class="col-sm-1">
-            <img src="/favicon.ico" alt="..." class="img-rounded" onmouseover="bigImg(this)" onmouseout="normalImg(this)" onclick="alert('<%=message.content%>');" style="padding-top:2px; padding-left:2px" width="36px" height="36px">
+            <img src="<%= User.find(message.sender_id).image.url %>" alt="User.find(message.sender_id).first_name" class="img-circle" onmouseover="bigImg(this)" onmouseout="normalImg(this)" onclick="alert('<%=message.content%>');" style="padding-top:2px; padding-left:2px" width="36px" height="36px">
           </div>
           <div class="col-sm-11">
             <div id="message<%=message.id%>">
