--- a/app/views/team/profile.html.erb
+++ b/app/views/team/profile.html.erb
@@ -7,7 +7,6 @@ background-size: cover;
 }
 </style>
 
-
 <div style="text-align:center">
   <div class="row">
     <br><br><br><br><br><br><br><br><br><br><br>
@@ -19,7 +18,7 @@ background-size: cover;
             <input id="imageupload" type="file" name="image" style="visibility:hidden;position:absolute;top:0;left:0;">
             <label for="imageupload" style="cursor: pointer;"><img class="img-rounded" src="<%= current_user.image.url %>" alt="<%=current_user.first_name%>" onmouseover="editImg(this)" onmouseout="normalImg(this)" width="100px" height="100px"></label>
           </form>
-          <a data-toggle="collapse" href="#name" aria-expanded="false" aria-controls="name">
+          <a data-toggle="collapse" href="#name" aria-expanded="false" aria-controls="name" style="text-decoration: none;">
             <h3><%=current_user.first_name%></h3>
           </a>
           <div class="collapse" id="name">
