--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -1,4 +1,4 @@
-
+<div id="test">ggg</div>
 <h3>List of Chats</h3>
 <%= link_to "팀원 추가", action: 'addmember', controller: 'team', team: @team.id%>
 <% if @chat %>
@@ -61,5 +61,48 @@
   <input type="submit" value="send">
 </form>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+fafasdf
+fdsaf
 
+fasd
+
+
+<a href="#test">home</a>
 <%= link_to "SHOW TASKS", action: 'show', controller: 'task', team: @team.id%>
