--- a/app/views/sync/messages/_newmessages.html.erb
+++ b/app/views/sync/messages/_newmessages.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-1">
-    <img src="/favicon.ico" alt="..." class="img-rounded" style="padding-top:2px; padding-left:2px" width="36px" height="36px">
+    <img src="<%= current_user.image.url %>" alt="User.find(message.sender_id).first_name" class="img-circle" onmouseover="bigImg(this)" onmouseout="normalImg(this)" onclick="alert('<%=message.content%>');" style="padding-top:2px; padding-left:2px" width="36px" height="36px">
   </div>
   <div class="col-sm-11">
     <strong><%=User.find(message.sender_id).first_name%></strong><br>
