--- a/app/views/sync/whiteboards/_whiteboardcondition.html.erb
+++ b/app/views/sync/whiteboards/_whiteboardcondition.html.erb
@@ -1,8 +1,5 @@
-<% if whiteboard.edit == true && whiteboard.user == current_user %>
-  <button id="whiteboardsend">Submit</button>
-
-<% elsif whiteboard.edit == true %>
-  <button id="whiteboardblock" disabled>It is being edited</button>
+<% if whiteboard.edit == true %>
+  <button id="whiteboardblock" disabled><span class="ui-button-text">It is being edited</span></button>
 
 <% else %>
   <button id="whiteboardchange">EDIT</button>
